<resources>
    <string name="app_name">"Anywear "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_hint">Enter folder name</string>
    <string name="string_empty_text">NO \nOUTFITS \nFOUND</string>
    <string name="string_cannot_do_that">You can\'t do that</string>
    <string name="string_delete">Delete \"</string>
    <string name="string_folder">\" folder?</string>
    <string name="string_delete_this_folder">Are you sure you want to delete this folder?</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_continue">Continue</string>
    <string name="string_rename_hint">New folder name</string>
    <string name="string_power_consumption">Causes extra power consumption</string>
    <string name="string_fast_image">Fast Image Loading</string>
    <string name="string_deletes_cache">Deletes the application cache</string>
    <string name="string_clear_cache">Clear cache</string>
    <string name="string_restore_defaults">Restore app\'s default settings and folders</string>
    <string name="string_restore_defaults_title">Restore defaults</string>
    <string name="string_app_lock">Application lock</string>
    <string name="string_enable_disable">Enable or disable app password</string>
    <string name="string_app_lock_title">Application lock</string>
    <string name="string_set_up_password">Setup Password</string>
    <string name="string_type_your_password">Type your password</string>
    <string name="string_ootd_category">OOTD Notification</string>
    <string name="string_enable_disable_ootd">Enable or disable outfit suggestion</string>
    <string name="string_ootd_noti">OOTD Notification</string>
    <string name="string_select_time">Select time</string>
    <string name="string_notification_time">Notification Time</string>
    <string name="string_rate_share_category">Rate and Share</string>
    <string name="string_rate">Rate</string>
    <string name="string_share">Share</string>
    <string name="string_extras">Extras</string>
    <string name="string_report_a_bug">Report a bug</string>
    <string name="string_for_continued_dev">Donate for continued development</string>
    <string name="string_donate">Donate</string>
    <string name="string_about_app_and_dev">About app and developer</string>
    <string name="string_about">About</string>
    <string name="pref_fast_load">preference_fast_image_load</string>
    <string name="pref_clear_cache">clear cache</string>
    <string name="pref_defaults">defaults</string>
    <string name="pref_app_lock">app lock</string>
    <string name="pref_set_app_lock">set up lock</string>
    <string name="pref_ootd_noti">ootd notification</string>
    <string name="pref_set_time">set time ootd</string>
    <string name="pref_rate">rate</string>
    <string name="pref_share">share</string>
    <string name="pref_bug">bug</string>
    <string name="pref_donate">donate</string>
    <string name="pref_about">about</string>
    <string name="string_cache_cleared">Cache cleared</string>
    <string name="string_clear_cache_title">Clear cache?</string>
    <string name="string_delete_cached_data">Delete cached data?</string>
    <string name="string_clear_data">Reset defaults</string>
    <string name="string_clear_data_message">Restore default settings and folders?</string>
    <string name="google_billing_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAn1xqE6eV1tqqEBE7+GDL/Acfz1LRKDw5TExtsaiSsgLGdAtkK+knH9vK/w8ASiO/iC4SP52epJXxlo2Y6EcP21olSe+JMqPn5k1Ol3ZiqYbHcvl6JajpuyTz+tkKC0yi622t0rIjwFc30ucPV5WGDihiPux5BMFmOIuZy8ndlshgeqB8nE1PW203ECj1WwFtGq+m+zqz5UHkyFaiiq1NC8AtEMv4ksYrti+rn5g8+i2a7dNzHisZhJyx5iSJ8FKdS9gnJhjmvThGgmJSmlcBZhopT0uTGYbjwjHwsQZPFQGmzDwPf6f28p3w+l1Qgxnw8MoBbtYkmLGSNmMSixVLrwIDAQAB</string>
    <string name="string_create">Create</string>
    <string name="string_folder_exists">Folder already exists</string>
    <string name="string_no_folder_created">No folder created</string>
    <string name="string_create_new_folder">Create new folder</string>
    <string name="string_thanks_for_helpinh">Thank you so much it will help me a lot!</string>
    <string name="string_thanks_already">Thanks but you already donated</string>
    <string name="string_donation_title">Thanks for your donation!</string>
    <string name="string_no_problem">No problem!</string>
    <string name="string_vibration">Vibration</string>
    <string name="string_vibration_summary">Enable or disable vibration on long tap</string>
    <string name="pref_vibration">vib</string>
    <string name="string_select_sources">Select sources</string>
    <string name="string_shuffle">Shuffle</string>
    <string name="string_apps">Apps</string>
    <string name="string_linkedin">LinkedIn</string>
    <string name="string_email">Email</string>
    <string name="string_select_atleast_one">You must select at least one(1) data source</string>
    <string name="string_hint_outfit">Search outfits</string>
    <string name="string_empty_folders">All selected folders are empty</string>
    <string name="pref_folders">fodlersss</string>
    <string name="string_select_folders">Select folders</string>
    <string name="string_folders">Folders</string>
    <string name="string_about_app">
        Deciding what to wear is difficult,
        especially for the women. It consumes a lot
        of time in the morning which leads to being
        late going to school or in the office, so I decided to create this handy program which acts as a fashion stylist that deals with your OOTD!
        and with the OOTD morning notification you can just literally wake up in the morning with your outfits ready! hooray!
    </string>
    <string name="string_outfit_name">Enter outfit name</string>
</resources>
