<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_web_hi_res_512" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Anywear"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="(V 1.0)"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/string_about_app"
            android:textColor="@android:color/white" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Designed and Developed by"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Joey  Ramirez"
                android:textColor="@android:color/white"
                android:textSize="25sp" />


        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_apps"
                style="@style/ButtonAbout"
                android:onClick="clickHandler"
                android:text="@string/string_apps" />

            <Button
                android:id="@+id/button_linkedin"
                style="@style/ButtonAbout"
                android:onClick="clickHandler"
                android:text="@string/string_linkedin" />

            <Button
                android:id="@+id/button_email"
                style="@style/ButtonAbout"
                android:onClick="clickHandler"
                android:text="@string/string_email" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>